Refactor(WorkoutPerWorkoutPlanController): vinculação de usuários na ficha de treino
- Corrigido o envio da lista de usuários vinculados para o Thymeleaf (agora enviado como List<User>).
- Atualizado o HTML para usar 'user.userId' e 'user.userName' em vez de 'link.user.userId'.
- Ajustado o método de desvincular usuários para receber apenas os IDs (inteiros) e não mais os objetos.
- Incluído 'ex.printStackTrace()' para facilitar debug de erros no controller.
- Melhorada a consistência entre as operações de vínculo e desvínculo de treinos e usuários.